microsvc/football-envoy-sidecar/envoy.yaml
static_resources:
  listeners:
  # ingress
  - name: football_sidecar_listener

    address:
      socket_address:
        address: 0.0.0.0
        port_value: 6199

    filter_chains:
    - filters:
      - name: envoy.filters.network.http_connection_manager
        typed_config:
          "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
          # used when emitting stats
          stat_prefix: football_sidecar_hcm_filter
          
          http_filters:
          - name: envoy.filters.http.router
            typed_config:
              "@type": type.googleapis.com/envoy.extensions.filters.http.router.v3.Router
          
          route_config:
            name: football_sidecar_http_route_config
            virtual_hosts:
            # name used when emitting stats, not imp for routing itself
            - name: football_sidecar_virtual_host
              domains: 
              - "*"
              routes:
              - name:
                match:
                  prefix: "/"
                route:
                  cluster: football_service

  clusters:
  - name: football_service
    type: STRICT_DNS
    lb_policy: ROUND_ROBIN
    load_assignment:
      cluster_name: football_service
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: 127.0.0.1
                port_value: 6200
